feat: add and test SecurityManager